--- a/organix.html
+++ b/organix.html
@@ -19,10 +19,10 @@
         </div>
         <div class="aside-content">
           <div class="searchbar-conatiner">
-            <div class="searchbar">
+            <form action="text">
               <i class="fa-solid fa-magnifying-glass"></i>
-              <p>Search</p>
-            </div>
+              <input type="text" id="text" placeholder="Search" />
+            </form>
             <div class="searchrightICon">
               &#8984;
               <p>F</p>
